introduction of epublib library, started sonar analysis