@@ -47,7 +47,7 @@
 			<version>${slf4jVersion}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
@@ -75,21 +75,60 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- check out epublib locally to force latest build -->
+		<dependency>
+			<groupId>nl.siegmann.epublib</groupId>
+			<artifactId>epublib-core</artifactId>
+			<version>3.1</version>
+		</dependency>
 
+		<!-- Prevent NPE from null serializers due to following exception when 
+			writing an ePub by adding this dependency. Special thanks to: https://community.jboss.org/thread/172860?tstart=0 
+			org.xmlpull.v1.XmlPullParserException: No valid serializer classes found 
+			in resource /META-INF/services/org.xmlpull.v1.XmlPullParserFactory that contained 
+			'org.xmlpull.mxp1.MXParser,org.xmlpull.mxp1_serializer.MXSerializer' -->
+		<dependency>
+			<groupId>xpp3</groupId>
+			<artifactId>xpp3_min</artifactId>
+			<version>1.1.4c</version>
+		</dependency>
 
 	</dependencies>
+
+
+
+	<repositories>
+		<repository>
+			<id>psiegman-repo</id>
+			<url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.16</version>
+				<configuration>
+					<junitArtifactName>junit:junit</junitArtifactName>
+					<!-- Special encoding parameters to pass unit tests. Thanks to: http://carlobertoldi.wordpress.com/2012/03/12/maven-unit-tests-and-those-funny-characters/ -->
+					<encoding>UTF-8</encoding>
+					<inputEncoding>UTF-8</inputEncoding>
+					<outputEncoding>UTF-8</outputEncoding>
+					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+						-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<description>A utility for converting ePubs with Sanskrit99 and URW Palladio IT fonts to Unicode.</description>
